--- a/docs/1.guide/0.index.md
+++ b/docs/1.guide/0.index.md
@@ -1,22 +1,31 @@
 ---
-icon: ri:rocket-2-line
+icon: ph:book-open-duotone
 ---
 
 # Getting Started
 
-## Quick Start
+> Create web servers with all necessary features and deploy them wherever you prefer.
 
-### Online playground
+## Intro
 
-The easiest way to get started with Nitro is to use the [online playground](https://stackblitz.com/github/unjs/nitro/tree/main/examples/hello-world).
+Nitro is an open source framework to build web servers using [unjs/h3](https://h3.unjs.io) and lots of built-in features.
+Nitro automatically makes your code compatible with any [deployment](/deploy) provider and runtime!
 
-### Starter Template
+> [!NOTE]
+> Nitro can be used standalone or as the server engine of full-stack frameworks such as [Nuxt](https://nuxt.com).
 
 
+## Quick start
+
+> [!TIP]
+> Instead of setting up a local development envirionment, you can use the [online playground](https://stackblitz.com/github/unjs/nitro/tree/main/examples/hello-world).
+
+::note
 Make sure you have installed the recommended setup:
 
 - Latest LTS version of [Node.js](https://nodejs.org/en), or [Bun](https://bun.sh/).
-- [Visual Studio Code](https://code.visualstudio.com/).
+- [Visual Studio Code](https://code.visualstudio.com/)
+::
 
 Create a new project using starter template:
 
@@ -51,59 +60,46 @@ You can try it locally with:
 You can find more examples in the Nitro repository: [unjs/nitro/examples](https://github.com/unjs/nitro/tree/main/examples)
 ::
 
-### Files
+## Directory structure
 
 The starter template some important files to get you started.
 
-##### `package.json`
+### `routes/`
 
-The `package.json` file contains all the dependencies and scripts for your project.
+The `routes/` directory contains your application handlers. You can create subdirectories inside `routes/` dir to create nested handlers. The file name is the route path.
 
-##### `nitro.config.ts`
+:read-more{to="/guide/routing"}
+
+### `api/`
+
+The `api/` directory is similar to `route/` with only difference that routes inside it will be prefixed with `/api/` for convenience.
+
+:read-more{to="/guide/routing"}
+
+### `utils/`
+
+This directory contains your application utils with auto import support.
+
+:read-more{to="/guide/plugins"}
+
+### `plugins/`
+
+This directory contains your custom nitro plugins.
+
+:read-more{to="/guide/plugins"}
+
+### `nitro.config.ts`
 
 The `nitro.config.ts` file contains the configuration for Nitro.
 
-##### `tsconfig.json`
+:read-more{to="/guide/configuration"}
 
-The `tsconfig.json` file contains the TypeScript configuration for your project. It extends an automatically generated `./.nitro/types/tsconfig.json` file that contains the configuration for Nitro.
+### `tsconfig.json`
 
-You can use `npm run prepare` to generate some Nitro files in `.nitro` directory.
+The `tsconfig.json` file contains the TypeScript configuration for your project.
 
-::warn
-Do not change this file directly, use `typescript` key in `nitro.config.ts` instead.
-::
+:read-more{to="/guide/typescript"}
 
-`routes/**/*.{ts,js}`
+### `package.json`
 
-The `routes` directory contains your application handlers. You can create subdirectories inside `routes` to create nested handlers. The file name is the route path.
-
-## Nightly Release Channel
-
-Nitro offers a nightly release channel that automatically releases for every commit to `main` branch.
-
-You can opt-in to the nightly release channel by updating your `package.json`:
-
-::code-group
-```diff [Nitro]
-{
-  "devDependencies": {
---    "nitropack": "^2.0.0"
-++    "nitropack": "npm:nitropack-nightly@latest"
-  }
-}
-```
-```diff [Nuxt]
-{
-  "devDependencies": {
---    "nuxt": "^3.0.0"
-++    "nuxt": "npm:nuxt3@latest"
-  }
-}
-```
-::
-
-::alert
-If you are using Nuxt, [use the Nuxt nightly channel](https://nuxt.com/docs/guide/going-further/nightly-release-channel#opting-in) as it already includes `nitropack-nightly`.
-::
-
-Remove the lockfile (`package-lock.json`, `yarn.lock`, `pnpm-lock.yaml`, or `bun.lockb`) and reinstall the dependencies.
+The `package.json` file contains all the dependencies and scripts for your project.
