--- a/docs/1.guide/2.routing.md
+++ b/docs/1.guide/2.routing.md
@@ -1,17 +1,20 @@
 ---
-title: Routing
 icon: ri:direction-line
 ---
 
-# Routing
+# Server Routes
 
-> Nitro support filesystem routing to define handler as well as defining route rules for maximum flexibility and performance.
+> Nitro support filesystem routing to automatically map files to h3 routes.
 
-A handle is a function that will be binded to a route and executed when the route is matched by the router for an incoming request.
+## Event handlers
 
-## Filesystem Routing
+An [event handler](https://h3.unjs.io/guide/event) is a function that will be binded to a route and executed when the route is matched by the router for an incoming request.
 
-Nitro supports file-based routing for your API routes (file are atomatically mapped to [unjs/h3](https://github.com/unjs/h3) routes). Defining a route is as simple as creating a file inside the `api/` or `routes/` directory.
+:read-more{to="https://h3.unjs.io/guide/event"}
+
+## Filesystem routing
+
+Nitro supports file-based routing for your API routes (file are atomatically mapped to [h3 routes](https://h3.unjs.io/guide/router). Defining a route is as simple as creating a file inside the `api/` or `routes/` directory.
 
 You can only define one handler per files and you can [append the HTTP method](#specific-request-method) to the filename to define a specific request method.
 
@@ -24,16 +27,16 @@ routes/
 nitro.config.ts
 ```
 
-::alert{type=primary}
+::note
+If you are using [Nuxt](https://nuxt.com), move the `server/api/` and `server/routes/` instead.
+::
+
+::tip
 Some providers like Vercel use a top-level `api/` directory as a feature, therefore routes placed in `/api` wont work.
 You will have to use `routes/api/`.
 ::
 
-::alert
-If you are using [Nuxt](https://nuxt.com), move the `api/` and `routes/` inside the `server/` directory.
-::
-
-### Simple route
+### Simple routes
 
 First, create a file in `routes/` or `api/` directory. The filename will be the route path.
 
@@ -44,8 +47,6 @@ export default defineEventHandler(() => {
   return { hello: 'API' }
 })
 ```
-
-You do not need to import `defineEventHandler` as it is automatically imported thanks to [auto-import feature](/guide/auto-imports).
 
 ### Route with params
 
@@ -126,8 +127,6 @@ export default defineEventHandler(async event => {
 ```
 ::
 
-Check out [h3 JSDocs](https://www.jsdocs.io/package/h3) for all available utilities like `getRouterParam` or `readBody`.
-
 ### Catch all route
 
 You can create a special route that will match all routes that are not matched by any other route. This is useful for creating a default route.
@@ -142,6 +141,83 @@ export default defineEventHandler(event => {
 })
 ```
 
+## Middleware
+
+Nitro route middleware can hook into the request lifecycle.
+
+::tip
+A middleware can modify the request before it is processed, not after.
+::
+
+:read-more{to="https://h3.unjs.io/guide/event-handler#middleware"}
+
+Middleware are auto-registered within the `middleware/` directory.
+
+```md
+routes/
+  hello.ts
+middleware/
+  auth.ts
+  logger.ts
+  ...
+nitro.config.ts
+```
+
+### Simple middleware
+
+Middleware are defined exactly like route handlers with the only exception that they should not return anything.
+Returning from middleware behaves like returning from a request - the value will be returned as a response and further code will not be ran.
+
+```ts [middleware/auth.ts]
+export default defineEventHandler((event) => {
+  // Extends or modify the event
+  event.context.user = { name: 'Nitro' }
+})
+```
+
+Middleware in `middleware/` directory are automatically registered for all routes. If you want to register a middleware for a specific route, see [Object Syntax Event Handler](#object-syntax-event-handler).
+
+::note
+Returning anything from a middleware will close the request and should be avoided! Any returned value from middleware will be the response and further code will not be executed however **this is not recommended to do!**
+::
+
+### Execution order
+
+Middleware are executed in directory listing order.
+
+```md
+middleware/
+  auth.ts <-- First
+  logger.ts <-- Second
+  ... <-- Third
+```
+
+Prefix middleware with a number to control their execution order.
+
+```md
+middleware/
+  1.logger.ts <-- First
+  2.auth.ts <-- Second
+  3.... <-- Third
+```
+
+### Request filtering
+
+Middleware are executed on every request.
+
+Apply custom logic to scope them to specific conditions.
+
+For example, you can use the URL to apply a middleware to a specific route:
+
+```ts [middleware/auth.ts]
+export default defineEventHandler((event) => {
+  // Will only execute for /auth route
+  if (getRequestURL(event).pathname.startsWith('/auth')) {
+    event.context.user = { name: 'Nitro' }
+  }
+})
+```
+
 ## Route Rules
 
 Nitro allows you to add logic at the top-level for each route of your configuration. It can be used for redirecting, proxying, caching and adding headers to routes.
@@ -150,7 +226,7 @@ It is a map from route pattern (following [unjs/radix3](https://github.com/unjs/
 
 When `cache` option is set, handlers matching pattern will be automatically wrapped with `defineCachedEventHandler`. See the [guide cache](/guide/cache) to learn more about this function.
 
-::alert
+::note
 `swr: true|number` is shortcut for `cache: { swr: true, maxAge: number }`
 ::
 
@@ -188,114 +264,3 @@ export default defineNuxtConfig({
 })
 ```
 ::
-
-## Route Middleware
-
-Nitro route middleware can hook into the request lifecycle.
-
-::alert{type=primary}
-A middleware can modify the request before it is processed, not after.
-::
-
-Middleware are auto-registered within the `middleware/` directory.
-
-```md
-routes/
-  hello.ts
-middleware/
-  auth.ts
-  logger.ts
-  ...
-nitro.config.ts
-```
-
-### Simple Middleware
-
-Middleware are defined exactly like route handlers with the only exception that they should not return anything.
-Returning from middleware behaves like returning from a request - the value will be returned as a response and further code will not be ran.
-
-```ts [middleware/auth.ts]
-export default defineEventHandler((event) => {
-  // Extends or modify the event
-  event.context.user = { name: 'Nitro' }
-})
-```
-
-Middleware in `middleware/` directory are automatically registered for all routes. If you want to register a middleware for a specific route, see [Object Syntax Event Handler](#object-syntax-event-handler).
-
-::alert
-Returning anything from a middleware will close the request and should be avoided! Any returned value from middleware will be the response and further code will not be executed however **this is not recommended to do!**
-::
-
-### Execution Order
-
-Middleware are executed in directory listing order.
-
-```md
-middleware/
-  auth.ts <-- First
-  logger.ts <-- Second
-  ... <-- Third
-```
-
-Prefix middleware with a number to control their execution order.
-
-```md
-middleware/
-  1.logger.ts <-- First
-  2.auth.ts <-- Second
-  3.... <-- Third
-```
-
-### Request Filtering
-
-Middleware are executed on every request.
-
-Apply custom logic to scope them to specific conditions.
-
-For example, you can use the URL to apply a middleware to a specific route:
-
-```ts [middleware/auth.ts]
-export default defineEventHandler((event) => {
-  // Will only execute for /auth route
-  if (getRequestURL(event).pathname.startsWith('/auth')) {
-    event.context.user = { name: 'Nitro' }
-  }
-})
-```
-
-## Object Syntax Event Handler
-
-Since H3@1.8, you can use a new object syntax to define event handler.
-
-::alert{type=primary}
-Read the announcement on the [UnJS blog](https://unjs.io/blog/2023-08-15-h3-towards-the-edge-of-the-web#object-syntax-event-handlers).
-::
-
-You can start by defining middleware in a file like `utils/auth.ts` to be able to auto-import them in your routes:
-
-```ts [utils/auth.ts]
-export const auth = defineRequestMiddleware((event) => {
-  event.context.auth = { name: 'admin' }
-})
-```
-
-```ts [utils/log.ts]
-export const log = defineRequestMiddleware((event) => {
-  console.log(event)
-})
-```
-
-Then, you can use them in your routes:
-
-```ts [routes/hello.ts]
-export default eventHandler({
-  onRequest: [auth],
-  onBeforeResponse: [log],
-  async handler(event) {
-    return `Hello ${event.context.auth?.name || 'Guest'}`
-  },
-})
-```
-
-This synxtax allows you to order and define middleware before the handler and before the response.
