--- a/docs/1.guide/3.configuration.md
+++ b/docs/1.guide/3.configuration.md
@@ -4,9 +4,13 @@ icon: ri:settings-3-line
 
 # Configuration
 
-You can customize your Nitro server with a single configuration file `nitro.config.ts`.
+> Customize and extend Nitro defaults.
 
-If you are using [Nuxt](https://nuxt.com), use the `nitro` option in your Nuxt config.
+::read-more{to="/config"}
+See [config reference](/config) for available options.
+::
+
+You can customize your Nitro builder with a configuration file.
 
 ::code-group
 ```ts [nitro.config.ts]
@@ -24,20 +28,13 @@ export default defineNuxtConfig({
 ```
 ::
 
-You can find all the [available options](/config) to configure Nitro.
+> [!IMPORTANT]
+> If you are using [Nuxt](https://nuxt.com), use the `nitro` option in your Nuxt config instead.
 
-Nitro loads the configuration using [unjs/c12](https://github.com/unjs/c12), giving more  possibilities such as using `.nitrorc` file in current working directory or in the user's home directory.
+> [!TIP]
+> Nitro loads the configuration using [unjs/c12](https://github.com/unjs/c12), giving more  possibilities such as using `.nitrorc` file in current working directory or in the user's home directory.
 
-::code-group
-```bash [.nitrorc]
-timing=true
-```
-```bash [.nuxtrc]
-nitro.timing=true
-```
-::
-
-## Runtime Configuration
+## Runtime configuration
 
 Nitro provides a runtime config API to expose configuration within your application, with the ability to update it at runtime by setting environment variables. This is useful when you want to expose different configuration values for different environments (e.g. development, staging, production). For example, you can use this to expose different API endpoints for different environments or to expose different feature flags.
 
@@ -76,8 +73,6 @@ export default defineEventHandler((event) => {
 });
 ```
 ::
-
-`useRuntimeConfig(event)` is an auto-imported function. Read more about [auto-imports](/guide/auto-imports).
 
 ### Local development
 
