--- a/docs/1.guide/5.cache.md
+++ b/docs/1.guide/5.cache.md
@@ -4,12 +4,127 @@ icon: ri:speed-line
 
 # Cache
 
-Nitro provides a powerful caching system built on top of the [storage layer](/guide/storage).
+> Nitro provides a caching system built on top of the storage layer.
 
-It stores the data in the `cache` mount point.
+## Cached event handlers
 
-- In development, it will use the [filesystem driver](https://unstorage.unjs.io/drivers/fs) writing to `.nitro/cache` or `.nuxt/cache` if using [Nuxt](https://nuxt.com).
+To cache an event handler, you've just to use the `defineCachedEventHandler` function.
+
+It works like the `defineEventHandler` function but with an additional second  [options](#options) parameter.
+
+```ts [routes/cached.ts]
+// Cache an API handler
+export default defineCachedEventHandler((event) => {
+  // My event handler
+}, { maxAge: 60 * 60 /* 1 hour */ });
+```
+
+
+With this example, the response will be cached for 1 hour and a stale value will be sent to the client while the cache is being updated in the background. If you want to immediately return the updated response set `swr: false`.
+
+::important
+All incoming request headers are dropped when handling cached responses. If you define the `varies` option, only the specified headers will be considered when caching and serving the responses.
+::
+
+See the [options](#options) section for more details about the available options.
+
+## Cached functions
+
+You can also cache a function using the `cachedFunction` function. This is useful to cache the result of a function that is not an event handler but a part of it and reuse it in multiple handlers.
+
+For example, you could want to cache for 1 hour the result of an API call:
+
+::code-group
+```ts [utils/github.ts]
+export const cachedGHStars = defineCachedFunction(async (repo: string) => {
+  const data: any = await $fetch(`https://api.github.com/repos/${repo}`)
+
+  return data.stargazers_count
+}, {
+  maxAge: 60 * 60,
+  name: 'ghStars',
+  getKey: (repo: string) => repo
+})
+```
+```ts [api/stars/[...repo\\].ts]
+export default defineEventHandler(async (event) => {
+  const repo = event.context.params.repo
+  const stars = await cachedGHStars(repo).catch(() => 0)
+
+  return { repo, stars }
+})
+```
+::
+
+The stars will be cached in development inside **.nitro/cache/functions/ghStars/&lt;owner&gt;/&lt;repo&gt;.json** with `value` being the number of stars.
+
+```json
+{"expires":1677851092249,"value":43991,"mtime":1677847492540,"integrity":"ZUHcsxCWEH"}
+```
+
+## Caching route rules
+
+This feature enables you to add caching routes based on a glob pattern directly in the main configuration file. This is especially useful to have a global cache strategy for a part of your application.
+
+
+Cache all the blog routes for 1 hour with `stale-while-revalidate` behavior:
+
+::code-group
+```ts [nitro.config.ts]
+export default defineNitroConfig({
+  routeRules: {
+    "/blog/**": { cache: { maxAge: 60 * 60 } },
+  },
+});
+```
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  routeRules: {
+    "/blog/**": { cache: { maxAge: 60 * 60 } },
+  },
+});
+```
+::
+
+If we want to use a [custom storage](#customize-cache-storage) mount point, we can use the `base` option.
+
+::code-group
+```ts [nitro.config.ts]
+export default defineNitroConfig({
+  storage: {
+    redis: {
+      driver: "redis",
+      url: "redis://localhost:6379",
+    },
+  },
+  routeRules: {
+    "/blog/**": { cache: { maxAge: 60 * 60, base: "redis" } },
+  },
+});
+```
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  nitro: {
+    storage: {
+      redis: {
+        driver: "redis",
+        url: "redis://localhost:6379",
+      },
+    },
+  },
+  routeRules: {
+    "/blog/**": { cache: { maxAge: 60 * 60, base: "redis" } },
+  },
+});
+```
+::
+
+## Customize cache storage
+
+Nitro stores the data in the `cache:` mount point.
+
 - In production, it will use the [memory driver](https://unstorage.unjs.io/drivers/memory) by default.
+- In development, it will use the [filesystem driver](https://unstorage.unjs.io/drivers/fs) writing to a temporary dir.
 
 To overwrite the production storage, set the `cache` mount point using the `storage` option:
 
@@ -65,177 +180,80 @@ export default defineNuxtConfig({
 ```
 ::
 
-## Usage
-
-There is several way to use the cache layer.
-
-You can wrap a function or an event handler or use the route rules. The cached data will be stored, in development, in `.nitro/cache`. You can create namespaces by using the `group` option. By default, it's `nitro/handlers` for handlers and `nitro/functions` for functions.
-
-### Cached Event Handler
-
-To cache an event handler, you've just to use the `defineCachedEventHandler` function. It works like the `defineEventHandler` function but with an additional `options` parameter.
-
-::code-group
-```ts [Router Handler]
-// Cache an API handler
-export default defineCachedEventHandler((event) => {
-  // My event handler
-}, {
-  maxAge: 60 * 60 // 1 hour
-});
-```
-::
-
-With this example, the response will be cached for 1 hour and a stale value will be sent to the client while the cache is being updated in the background. If you want to immediately return the updated response set `swr: false`.
-
-It's important to note that by default, all incoming request headers are dropped when handling cached responses. If you define the `varies` option, only the specified headers will be considered when caching and serving the responses.
-
-See the [options](#options) section for more details about the available options.
-
-### Function
-
-You can also cache a function using the `cachedFunction` function. This is useful to cache the result of a function that is not an event handler but a part of it and reuse it in multiple handlers.
-
-For example, you could want to cache for 1 hour the result of an API call:
-
-::code-group
-```ts [utils/github.ts]
-export const cachedGHStars = defineCachedFunction(async (repo: string) => {
-  const data: any = await $fetch(`https://api.github.com/repos/${repo}`)
-
-  return data.stargazers_count
-}, {
-  maxAge: 60 * 60,
-  name: 'ghStars',
-  getKey: (repo: string) => repo
-})
-```
-```ts [api/stars/[...repo\\].ts]
-export default defineEventHandler(async (event) => {
-  const repo = event.context.params.repo
-  const stars = await cachedGHStars(repo).catch(() => 0)
-
-  return { repo, stars }
-})
-```
-::
-
-The stars will be cached in development inside **.nitro/cache/functions/ghStars/&lt;owner&gt;/&lt;repo&gt;.json** with `value` being the number of stars.
-
-```json
-{"expires":1677851092249,"value":43991,"mtime":1677847492540,"integrity":"ZUHcsxCWEH"}
-```
-
-### Route Rules
-
-This feature enables you to add caching routes based on a glob pattern directly in the main configuration file. This is especially useful to have a global cache strategy for a part of your application.
-
-::alert{type="primary"}
-This feature is still experimental and may evolve in the future.
-::
-
-Cache all the blog routes for 1 hour with `stale-while-revalidate` behavior:
-
-::code-group
-```ts [nitro.config.ts]
-export default defineNitroConfig({
-  routeRules: {
-    "/blog/**": {
-      swr: 60 * 60,
-      // or
-      cache: {
-        maxAge: 60 * 60
-      }
-    },
-  },
-});
-```
-```ts [nuxt.config.ts]
-export default defineNuxtConfig({
-  routeRules: {
-    "/blog/**": {
-      swr: 60 * 60,
-      // or
-      cache: {
-        maxAge: 60 * 60
-      }
-    },
-  }
-});
-```
-::
-
-If we want to use a custom storage mount point, we can use the `base` option. Let's store our cache result for the blog routes in a Redis storage for production:
-
-::code-group
-```ts [nitro.config.ts]
-export default defineNitroConfig({
-  storage: {
-    redis: {
-      driver: "redis",
-      url: "redis://localhost:6379",
-    },
-  },
-  routeRules: {
-    "/blog/**": {
-      swr: 60 * 60,
-      cache: {
-        base: "redis",
-      },
-    },
-  },
-});
-```
-```ts [nuxt.config.ts]
-export default defineNuxtConfig({
-  nitro: {
-    storage: {
-      redis: {
-        driver: "redis",
-        url: "redis://localhost:6379",
-      },
-    },
-  },
-  routeRules: {
-    "/blog/**": {
-      swr: 60 * 60,
-      cache: {
-        base: "redis",
-      },
-    },
-  },
-});
-```
-::
 
 ## Options
 
 The `cachedEventHandler` and `cachedFunction` functions accept the following options:
-- `name`: Handler name.
-  - Type: `String`
-  - Default: Guessed from function name if not provided and fallback to `_` otherwise.
-- `group`: Part of cache name. Useful to organize cache storage.
-  - Type: `String`
-  - Default: `'nitro/handlers'` for handlers and `'nitro/functions'` for functions.
-- `getKey`: A function that accepts the same arguments of the function and returns a cache key (`String`).
-  - Type: `Function`
-  - Default: If not provided, a built-in hash function will be used that will generate a key based on the function arguments.
-- `integrity`: A value that invalidates the cache when changed.
-  - Type: `String`
-  - Default: Computed from **function code**, used in development to invalidate the cache when the function code changes.
-- `maxAge`: Maximum age that cache is valid in seconds.
-  - Type: `Number`
-  - Default: `1` (second).
-- `staleMaxAge`: Maximum age that a stale cache is valid in seconds. If set to `-1` a stale value will still be sent to the client, while updating the cache in the background.
-  - Type: `Number`
-  - Default: `0` (disabled).
-- `swr`: Enable `stale-while-revalidate` behavior.
-  - Default: `true`
-- `base`: Name of the storage mountpoint to use for caching.
-  - Default: `cache`.
-- `shouldInvalidateCache`: A function that returns a `Boolean` to invalidate the current cache and create a new one.
-  - Type: `Function`
-- `shouldBypassCache`: A function that returns a boolean to bypass the current cache without invalidating the existing entry.
-  - Type: `Function`
-- `varies`: An array of request headers to be considered for the cache
-  - Type: `string[]`
+
+### `name`
+
+- Type: `String`
+- Default: Guessed from function name if not provided and fallback to `_` otherwise.
+
+Handler name.
+
+### `group`
+
+- Type: `String`
+- Default: `'nitro/handlers'` for handlers and `'nitro/functions'` for functions.
+
+Part of cache name. Useful to organize cache storage.
+
+### `getKey`
+
+- Type: `Function`
+- Default: If not provided, a built-in hash function will be used that will generate a key based on the function arguments.
+
+A function that accepts the same arguments of the function and returns a cache key (`String`).
+
+### `integrity`
+
+- Type: `String`
+- Default: Computed from **function code**, used in development to invalidate the cache when the function code changes.
+
+A value that invalidates the cache when changed.
+
+### `maxAge`
+
+- Type: `Number`
+- Default: `1` (second).
+
+Maximum age that cache is valid in seconds.
+
+### `staleMaxAge`
+
+- Type: `Number`
+- Default: `0` (disabled).
+
+Maximum age that a stale cache is valid in seconds. If set to `-1` a stale value will still be sent to the client, while updating the cache in the background.
+
+### `swr`
+
+- Default: `true`
+
+Enable `stale-while-revalidate` behavior.
+
+### `base`
+
+- Default: `cache`.
+
+Name of the storage mountpoint to use for caching.
+
+### `shouldInvalidateCache`
+
+- Type: `Function`
+
+A function that returns a `Boolean` to invalidate the current cache and create a new one.
+
+### `shouldBypassCache`
+
+- Type: `Function`
+
+A function that returns a boolean to bypass the current cache without invalidating the existing entry.
+
+### `varies`
+
+- Type: `string[]`
+
+An array of request headers to be considered for the cache
+
