--- a/docs/1.guide/6.assets.md
+++ b/docs/1.guide/6.assets.md
@@ -1,13 +1,13 @@
 ---
 icon: ri:image-2-line
-title: Assets
 ---
 
-# Assets Handling
+# Assets
+
+## Public assets
 
 Nitro handles assets via the `public/` directory.
 
-## Public Assets
 
 All assets in `public/` directory will be automatically served. This means that you can access them directly from the browser without any special configuration.
 
@@ -20,7 +20,7 @@ package.json
 nitro.config.ts
 ```
 
-## Production Public Assets
+### Production public assets
 
 When building your Nitro app, the `public/` directory will be copied to `.output/public/` and a manifest with metadata will be created and embedded in the server bundle.
 
@@ -49,7 +49,7 @@ When building your Nitro app, the `public/` directory will be copied to `.output
 
 This allows Nitro to know the public assets without scanning the directory, giving high performance with caching headers.
 
-## Server Assets
+## Server assets
 
 All assets in `assets/` directory will be added to the server bundle. After building your application, you can find them in the `.output/server/chunks/raw/` directory. Be careful with the size of your assets, as they will be bundled with the server bundle.
 
@@ -64,7 +64,7 @@ export default defineEventHandler(async () => {
 })
 ```
 
-## Custom Server Assets
+### Custom server assets
 
 In order to add assets from a custom directory, you will need to define a path in your nitro config. This allows you to add assets from a directory outside of the `assets/` directory.
 
