--- a/docs/1.guide/6.fetch.md
+++ b/docs/1.guide/6.fetch.md
@@ -4,17 +4,12 @@ icon: ri:global-line
 
 # Fetch
 
-Nitro provides a built-in fetch API that can be used to get data from server endpoints or from other sources. It's build on top of the [unjs/ofetch](https://ofetch.unjs.io) package.
+Nitro provides a built-in fetch API that can be used to get data from server endpoints or from other sources. It's build on top of the [unjs/ofetch](https://ofetch.unjs.io).
 
-This is important to use fetch-api instead of libraries such as axios because it's optimized for serverless environments and agnostic to the runtime.
-
-::alert{type="info"}
-You can keep using native `fetch()` if prefer.
-::
 
 ## Usage
 
-In you handler, you've just to call the `$fetch` function to make a request. Automatically, the response will be smartly parsed using [unjs/destr](https://destr.unjs.io).
+In you handler, you've just to call the `$fetch` function to make a request. The response will be automatically parsed.
 
 ```ts [Router Handler]
 export default defineEventHandler(async (event) => {
@@ -24,7 +19,7 @@ export default defineEventHandler(async (event) => {
 })
 ```
 
-You can pass a generic type to the `$fetch` function to get a better type inference:
+You can pass a generic type to the `$fetch` function to get a better type inference.
 
 ```ts [Router Handler]
 import { Repo } from '~/types'
@@ -58,7 +53,7 @@ export default defineEventHandler(async (event) => {
 
 See more about the usage of the `$fetch` function in the [unjs/ofetch](https://ofetch.unjs.io) documentation.
 
-## In-Server Fetch
+## In-Server fetch
 
 You can also use the `$fetch` function to make internal requests to other handlers.
 
@@ -70,4 +65,4 @@ export default defineEventHandler(async (event) => {
 })
 ```
 
-In reality, no fetch request is made and the handler is directly called thanks to [unjs/unenv](https://unenv.unjs.io). This is useful to avoid making HTTP requests and to slow down your application.
+In reality, no fetch request is made and the handler is directly called thanks to [unjs/unenv](https://unenv.unjs.io). This is useful to avoid making HTTP request overhead.
