--- a/docs/1.guide/7.plugins.md
+++ b/docs/1.guide/7.plugins.md
@@ -2,23 +2,17 @@
 icon: ri:plug-line
 ---
 
-#  Plugins
+# Plugins
 
-Use plugins to extend Nitro's runtime behavior.
+> Use plugins to extend Nitro's runtime behavior.
 
-Plugins are auto-registered (filename ordering) and run synchronously on the first nitro initialization. They receive `nitroApp` context, which can be used to hook into lifecycle events.
+Nitro plugins will be **executed once** during server startup in order to allow extending Nitro's runtime behavior.
+They receive `nitroApp` context, which can be used to hook into Nitro lifecycle events.
 
-Scanning pattern: `plugins/**/*.{ts,mjs,js,cjs}`
+Plugins are auto-registered from `plugins/` directory and run synchronously (by order of file name) on the first Nitro initialization.
 
-You can order the plugins by prefixing them with a number:
 
-```md
-plugins/
-  1.first.ts
-  2.second.ts
-```
-
-**Example:** Simple plugin
+**Example:**
 
 ```ts
 // plugins/test.ts
@@ -44,9 +38,9 @@ export default defineNuxtConfig({
 ```
 ::
 
-## Nitro Runtime Hooks
+## Nitro runtime hooks
 
-Hooks allow extending the default runtime behaviour of Nitro by registering custom functions to the lifecycle events within plugins. (Read [unjs/hookable](https://github.com/unjs/hookable) to see how it works.)
+You can use Nitro [hooks]("https://github.com/unjs/hookable) to extend the default runtime behaviour of Nitro by registering custom (async or asnc) functions to the lifecycle events within plugins.
 
 **Example:**
 
@@ -58,7 +52,7 @@ export default defineNitroPlugin((nitro) => {
 })
 ```
 
-### Available Hooks
+### Available hooks
 
 See the [source code](https://github.com/unjs/nitro/blob/main/src/runtime/types.ts#L24) for list of all available runtime hooks.
 
@@ -71,7 +65,7 @@ See the [source code](https://github.com/unjs/nitro/blob/main/src/runtime/types.
 
 ## Examples
 
-### Capturing Errors
+### Capturing errors
 
 You can use plugins to capture all application errors.
 
@@ -83,7 +77,7 @@ export default defineNitroPlugin((nitro) => {
 })
 ```
 
-### Graceful Shutdown
+### Graceful shutdown
 
 You can use plugins to register a hook that resolves when Nitro is closed.
 
@@ -98,7 +92,7 @@ export default defineNitroPlugin((nitro) => {
 })
 ```
 
-### Request and Response lifecycle
+### Request and response lifecycle
 
 You can use plugins to register a hook that can run on request lifecycle:
 
@@ -118,11 +112,11 @@ export default defineNitroPlugin((nitroApp) => {
 });
 ```
 
-### Renderer Response
+### Renderer response
 
 You can use plugins to register a hook that modifies the [`renderer`](https://nitro.unjs.io/config#renderer) response.
 
-::alert
+::note
 This **only works** for render handler defined with [`renderer`](https://nitro.unjs.io/config#renderer) and won't be called for other api/server routes.
 In [Nuxt](https://nuxt.com/) this hook will be called for Server Side Rendered pages
 ::
