--- a/docs/1.guide/8.typescript.md
+++ b/docs/1.guide/8.typescript.md
@@ -1,26 +1,45 @@
 ---
 icon: tabler:brand-typescript
-title: TypeScript
 ---
 
-# TypeScript Support
+# Typescript
 
-Nitro supports TypeScript by default. If you are using the starter template, you have nothing to do :sparkles:.
+> Nitro automatically generates the types for auto-imports and server routes :sparkles:
 
-To add type hints within your project, create a `tsconfig.json` file:
+## `tsconfig.json`
 
-```json [tsconfig.json]
+To leverage type hints within your project, create a `tsconfig.json` file that extends auto generated types.
+
+::code-group
+```json [tsconfig.json (nitro)]
 {
   "extends": "./.nitro/types/tsconfig.json"
 }
 ```
 
-Run `npx nitropack prepare` to generate the types for global auto-imports. This can be useful in a CI environment or as a `postinstall` command in your `package.json`.
-
-If you are using [Nuxt](https://nuxt.com), your `tsconfig.json` can stay:
-
-```json [tsconfig.json]
+```json [server/tsconfig.json (nuxt)]
 {
-  "extends": "./.nuxt/tsconfig.json"
+  "extends": "../.nuxt/tsconfig.server.json"
 }
 ```
+::
+
+::tip
+Starter templates have this file by defualt and usually you don't need to do anything. If this file does not exists, you can manually create it.
+::
+
+## Prepare types
+
+You can use `prepare` command to auto generate the types.
+This can be useful in a CI environment or as a `postinstall` command in your `package.json`.
+
+:pm-x{command="nitro prepare"}
+
+::tip
+When using `nitro dev` command, types are also auto generated!
+::
+
+::note
+For [Nuxt](https://nuxt.com) you should use `nuxi generate`
+::
+
