--- a/docs/2.deploy/0.index.md
+++ b/docs/2.deploy/0.index.md
@@ -4,8 +4,9 @@ icon: ri:upload-cloud-2-line
 
 # Overview
 
-Nitro can generate different output formats suitable for different hosting providers from the same code base.
+> Learn more about Nitro deploy providers.
 
+Nitro can generate different output formats suitable for different hosting providers from the same code base.
 Using built-in presets, you can easily configure Nitro to adjust its output format with almost no additional code or configuration!
 
 ## Default output
@@ -13,7 +14,6 @@ Using built-in presets, you can easily configure Nitro to adjust its output form
 The default production output preset is [Node.js server](/deploy/node).
 
 When running Nitro in development mode, Nitro will always use a special preset called `nitro-dev` using Node.js with ESM in an isolated Worker environment with behavior as close as possible to the production environment.
-
 
 ## Zero-Config Providers
 
@@ -29,7 +29,7 @@ When deploying to production using CI/CD, Nitro tries to automatically detect th
 
 ## Changing the deployment preset
 
-If you need to build Nitro against a specific provider, you can target it by defining an environment variable named `NITRO_PRESET` or `SERVER_PRESET`, or by updating your Nitro [configuration](/guide/configuration) or using `--preset` argument.
+If you need to build Nitro against a specific provider, you can target it wby defining an environment variable named `NITRO_PRESET` or `SERVER_PRESET`, or by updating your Nitro [configuration](/guide/configuration) or using `--preset` argument.
 
 Using the environment variable approach is recommended for deployments depending on CI/CD.
 
