--- a/docs/2.deploy/10.runtimes/1.node.md
+++ b/docs/2.deploy/10.runtimes/1.node.md
@@ -4,18 +4,11 @@ icon: akar-icons:node-fill
 
 # Node.js
 
-Node.js deployment is the default Nitro preset.
+> Run Nitro apps with Node.js runtime.
 
-## Node.js Server
+**Preset:** `node-server`
 
-**Preset:** `node-server` ([switch to this preset](/deploy/#changing-the-deployment-preset))
-
-::alert{type="info"}
-**Default Preset**
-:br
-This is the default nitro output preset for production builds.
-::
-
+Node.js is the default nitro output preset for production builds and Nitro has native Node.js runtime support.
 
 Build project using nitro CLI:
 
@@ -47,7 +40,7 @@ You can customize server behavior using following environment variables:
 
 ## Cluster mode
 
-**Preset:** `node-cluster` ([switch to this preset](/deploy/#changing-the-deployment-preset))
+**Preset:** `node-cluster`
 
 For more performance and leveraging multi core handling, you can use cluster preset.
 
@@ -60,7 +53,7 @@ In addition to `node-server` environment variables, you can customize behavior:
 
 ## Handler (advanced)
 
-**Preset:** `node` ([switch to this preset](/deploy/#changing-the-deployment-preset))
+**Preset:** `node`
 
 Nitro also has a more low-level preset that directly exports a function with `(req, res) => {}` signature usable for middleware and custom servers.
 
