--- a/docs/2.deploy/2.custom-presets.md
+++ b/docs/2.deploy/2.custom-presets.md
@@ -1,20 +1,21 @@
 ---
 icon: ri:file-code-line
+aside: false
 ---
 
 # Custom Preset
 
-::alert{type="warning"}
-Custom local preset support is an experimental feature.
-::
-
-If you want to use a provider that Nitro doesn't support, or want to modify an existing one, you can create a local custom preset in your project.
+> If you want to use a provider that Nitro doesn't support, or want to modify an existing one, you can create a local custom preset in your project.
 
 Custom presets are local files that have a preset entry that defines builder configuration and a runtime entry point.
 
+::warning
+Custom local preset support is an experimental feature.
+::
+
 ## Example
 
-::alert
+::note
 Check [unjs/nitro-preset-starter](https://github.com/unjs/nitro-preset-starter) for a ready-to-use template.
 ::
 
