--- a/docs/3.config/0.index.md
+++ b/docs/3.config/0.index.md
@@ -1,28 +1,10 @@
 ---
 icon: ri:settings-3-line
-aside: false
 ---
 
-# Configuration
+# Config
 
-Customize your Nitro app with a configuration file.
-
-In order to customize Nitro's behavior, we create a file named `nitro.config.ts`.
-
-::code-group
-```ts [nitro.config.ts]
-export default defineNitroConfig({
-  // options
-});
-```
-```ts [nuxt.config.ts]
-export default defineNuxtConfig({
-  nitro: {
-    // options
-  }
-})
-```
-::
+:read-more{to="/guide/configuration"}
 
 ## General
 
@@ -265,7 +247,7 @@ export default defineNitroConfig({
 })
 ```
 
-::alert{type=info}
+::note{type=info}
 Note that `defineEventHandler` is a helper function from [`h3`](https://github.com/unjs/h3) library.
 ::
 
@@ -318,7 +300,7 @@ When `cache` option is set, handlers matching pattern will be automatically wrap
 
 See the [Cache API](/guide/cache) for all available cache options.
 
-::alert
+::note
 `swr: true|number` is shortcut for `cache: { swr: true, maxAge: number }`
 ::
 
