--- a/docs/1.guide/4.storage.md
+++ b/docs/1.guide/4.storage.md
@@ -2,20 +2,14 @@
 icon: ri:database-2-line
 ---
 
-# Storage Layer
+# Storage
 
-Nitro provides a built-in storage layer that can abstract filesystem or database or any other data source.
+> Nitro provides a built-in storage layer that can abstract filesystem or database or any other data source.
 
-`useStorage()` is an instance of [createStorage](https://unstorage.unjs.io/getting-started/usage) using the [memory driver](https://unstorage.unjs.io/drivers/memory).
+Nitro has built-in integration with [unjs/unstorage](https://unstorage.unjs.io) to provide a runtime agnostic persistent layer.
 
-By default, Nitro will also mount the current directory using the filesystem driver, using a prefix and where each folder serve to extend the prefix.
 
-- Every file will be under the `root` base.
-- Every source file will be under the `src` base. (By default, `src` is the `root` base)
-
-## Usage
-
-To use the storage layer, you can use the `useStorage()` and call `getItem` to retrieve an item and `setItem` to set an item.
+To use the storage layer, you can use the `useStorage()` and call `getItem(key)` to retrieve an item and `setItem(key, value)` to set an item.
 
 ```ts
 await useStorage().setItem('test:foo', { hello: 'world' })
@@ -28,23 +22,29 @@ await useStorage<{ hello: string }>('test').getItem('foo')
 await useStorage('test').getItem<{ hello: string }>('foo')
 ```
 
-See [Unstorage](https://unstorage.unjs.io/getting-started/usage) for detailed usage.
+:read-more{to="https://unstorage.unjs.io"}
 
-## Mount Points
+## Mount points
 
-You can mount storage drivers using the `storage` option in the [Nitro config](/guide/config) file.
+Storage root is in memory by default. Nitro also mounts `data:` using the platforms storage.
 
-The key is the mount point name, and the value is the driver name and configuration. You can find the driver list on [unstorage documentation](https://unstorage.unjs.io/) with their configuration. You can mount multiple drivers.
+```js
+const dataStorage = useStorage('data')
+```
+
+You can mount one or multiple custom storage drivers using the `storage` config.
+
+The key is the mount point name, and the value is the driver name and configuration.
 
 ::code-group
 ```ts [nitro.config.ts]
 export default defineNitroConfig({
   storage: {
-    'redis': {
+    redis: {
       driver: 'redis',
       /* redis connector options */
     },
-    'db': {
+    db: {
       driver: 'fs',
       base: './data/db'
     }
@@ -69,8 +69,8 @@ export default defineNuxtConfig({
 ```
 ::
 
-::alert{type="warning"}
-`cache` is a reserved mount point for the [cache layer](/guide/cache). Do not use it unless you want to overwrite the cache layer.
+::read-more{to="https://unstorage.unjs.io/"}
+You can find the driver list on [unstorage documentation](https://unstorage.unjs.io/) with their configuration.
 ::
 
 ### Runtime configuration
@@ -120,13 +120,29 @@ export default defineNuxtConfig({
 ```
 ::
 
-::alert{type="warning"}
+::warning
 This is a temporary workaround, with a better solution coming in the future! Keep a lookout on the GitHub issue [here](https://github.com/unjs/nitro/issues/1161#issuecomment-1511444675).
 ::
 
-## Development only Storage
+### Development-only mount points
 
-You can use the `devStorage` key to overwrite the storage configuration during development. This is very useful when you use a database in production and want to use the filesystem in development.
+By default, Nitro will mount the project directory and some other dirs using the filesystem driver in development time.
+
+```js
+// Access to project root dir
+const rootStorage = useStorage('root')
+
+// Access to project src dir (same as root by default)
+const srcStorage = useStorage('src')
+
+// Access to server cache dir
+const cacheStorage = useStorage('cache')
+
+// Access to the temp build dir
+const buildStorage = useStorage('build')
+```
+
+You also can use the `devStorage` key to overwrite the storage configuration during development. This is very useful when you use a database in production and want to use the filesystem in development.
 
 In order to use the `devStorage` key, you need to use the `nitro dev` command and the key in the `storage` option must be the same as the production one.
 
