--- a/docs/2.deploy/1.workers.md
+++ b/docs/2.deploy/1.workers.md
@@ -4,9 +4,9 @@ icon: ri:global-line
 
 # Edge Workers
 
-Nitro provides out of the box support for deploying to Edge Workers.
+> Nitro provides out of the box support for deploying to Edge Workers.
 
-## Deploy to Workers
+## Deploy to workers
 
 Nitro provides out of the box support for deploying any Nitro app to different Edge Worker offerings as well as Service Workers.
 
@@ -16,13 +16,7 @@ Nitro provides out of the box support for deploying any Nitro app to different E
 - [Netlify](/deploy/providers/netlify#netlify-edge-functions)
 - [Browser Service Workers](https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API) (via experimental preset `service-worker`)
 
-::alert{type="warning"}
-**Limitations**
-:br
-Deploying to edge workers has some limitations. See [limitations](/deploy/workers/#limitations) for more details.
-::
-
-### Limitations
+### Worker limitations
 
 - No support for raw TCP/IP traffic
 - Execution time is limited compared to classic serverless offerings (normally 15-30 seconds)
@@ -32,20 +26,18 @@ Deploying to edge workers has some limitations. See [limitations](/deploy/worker
 
 ### Incompatible libraries
 
-::alert{type="info"}
-**Help us**
-:br
+::note
 If you come across a library that you assume to be incompatible with edge workers, please open an issue on the [nitro repo](https://github.com/unjs/nitro/issues/new/choose) and help us keeping this list up to date.
 ::
 
 The following libraries are known to be incompatible with edge workers because of one of the above mentioned limitations:
 
-- `mongodb`
+#### `mongodb`
 
 > There are possible fixes for MongoDB, like using Realm and the [Realm SDK](https://www.mongodb.com/docs/realm/sdk/node/) or
 > using http interfaces (only available when self hosting MongoDB), but these are untested. You can find an example for using realm [here](https://github.com/albionstatus/albionstatus-backend/)
 
-- `mysql`
+#### `mysql`
 
 > You can find an example with a modified MySQL driver [here](https://github.com/cloudflare/worker-template-mysql)
 
